<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_bmi"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.crese.listselection.ActivityBMI">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:src="@drawable/bmichart"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageViewBMIChart"
        android:contentDescription="@string/bmi_picture"/>

    <TextView
        android:text="@string/_18_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_alignStart="@+id/textView5"
        android:layout_below="@+id/imageViewBMIChart"
        android:layout_alignEnd="@id/imageViewBMIChart"
        android:textAlignment="textEnd"
        android:layout_gravity="end"
        android:textColor="@color/colorLightBlue" />

    <TextView
        android:text="@string/_18_5_24_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignEnd="@id/imageViewBMIChart"
        android:id="@+id/textView5"
        android:textAlignment="textEnd"
        android:layout_gravity="end"
        android:textColor="@color/colorGreen" />

    <TextView
        android:text="@string/_25_29_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/textView5"
        android:layout_below="@+id/textView5"
        android:layout_alignEnd="@id/imageViewBMIChart"
        android:id="@+id/textView6"
        android:textAlignment="textEnd"
        android:layout_gravity="end"
        android:textColor="@color/colorYellow" />

    <TextView
        android:text="@string/_30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_alignStart="@id/textView5"
        android:layout_alignEnd="@id/imageViewBMIChart"
        android:id="@+id/textView7"
        android:textAlignment="textEnd"
        android:layout_gravity="end"
        android:textColor="@color/colorDarkOrange" />

    <TextView
        android:text="@string/underweight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewBMIChart"
        android:layout_toStartOf="@id/textView4"
        android:layout_alignStart="@id/imageViewBMIChart"
        android:id="@+id/textView11"
        android:textColor="@color/colorLightBlue" />
    <TextView
        android:text="@string/normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView11"
        android:layout_toStartOf="@id/textView5"
        android:layout_alignStart="@id/textView11"
        android:id="@+id/textView12"
        android:textColor="@color/colorGreen" />
    <TextView
        android:text="@string/overweight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView12"
        android:layout_alignStart="@id/textView11"
        android:layout_toStartOf="@id/textView5"
        android:id="@+id/textView13"
        android:textColor="@color/colorYellow" />
    <TextView
        android:text="@string/obese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView13"
        android:layout_alignStart="@id/textView11"
        android:layout_toStartOf="@id/textView5"
        android:id="@+id/textView14"
        android:textColor="@color/colorDarkOrange" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroupUnits"
        android:checkedButton="@+id/radioButtonEng"
        android:weightSum="1"
        android:orientation="horizontal"
        android:layout_above="@+id/textViewHeight"
        android:layout_alignParentStart="true" >

        <RadioButton
            android:text="@string/english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButtonEng"
            android:textColor="@android:color/white" />

        <RadioButton
            android:text="@string/metric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButtonMet"
            android:textColor="@android:color/white" />
    </RadioGroup>

    <TextView
        android:text="@string/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewHeight"
        android:textSize="18sp"
        android:layout_above="@+id/textViewWeight"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="3"
        android:id="@+id/editTextHeightFt"
        android:layout_toEndOf="@+id/textViewHeight"
        android:layout_alignStart="@+id/editTextWeight"
        android:layout_alignBaseline="@+id/textViewHeight"
        android:gravity="center"
        android:textAlignment="center"
        android:hint="@string/ft"
        android:textColor="@color/colorDarkOrange" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="3"
        android:layout_marginEnd="20dp"
        android:id="@+id/editTextHeightIn"
        android:layout_toEndOf="@id/editTextHeightFt"
        android:layout_alignBaseline="@id/editTextHeightFt"
        android:gravity="center"
        android:textAlignment="center"
        android:hint="@string/in"
        android:textColor="@color/colorDarkOrange" />

    <TextView
        android:text="@string/ftin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewHUnit"
        android:layout_toEndOf="@id/editTextHeightIn"
        android:layout_alignBaseline="@id/editTextHeightIn"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/textViewWUnit"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@android:color/white" />

    <TextView
        android:text="@string/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewWeight"
        android:textSize="18sp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_above="@+id/buttonCalc"
        android:layout_alignParentStart="true" />

    <EditText
        android:ems="6"
        android:id="@+id/editTextWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/textViewWeight"
        android:layout_alignBaseline="@+id/textViewWeight"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:maxLines="1"
        android:hint="@string/lb"
        android:textColor="@color/colorDarkOrange" />

    <TextView
        android:text="@string/lb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/editTextWeight"
        android:layout_alignBaseline="@id/editTextWeight"
        android:id="@+id/textViewWUnit"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/buttonCalc"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
