<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_guess"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.crese.listselection.ActivityGuess">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_a_number_between_1_and_10"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:id="@+id/textView1"
        android:textSize="18sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_below="@id/textView1"
        android:layout_marginBottom="20dp"
        android:layout_alignStart="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:gravity="center"
        android:textSize="50sp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:id="@+id/editTextGuess"
        android:hint="@string/Number" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/up"
        android:layout_below="@+id/textView1"
        android:layout_toEndOf="@+id/editTextGuess"
        android:layout_alignBottom="@id/editTextGuess"
        android:contentDescription="@string/arrows"
        android:id="@+id/imageView2" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/up"
        android:layout_below="@+id/textView1"
        android:layout_toStartOf="@+id/editTextGuess"
        android:layout_alignBottom="@id/editTextGuess"
        android:contentDescription="@string/arrows"
        android:id="@+id/imageView3" />

    <Button
        android:text="@string/guess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextGuess"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:id="@+id/button" />

    <TextView
        android:text="@string/please_enter_a_number_1_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_marginBottom="3dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView2"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/tries" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="125dp"
        android:src="@drawable/up"
        android:layout_below="@+id/tries"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView"
        android:contentDescription="@string/arrows" />

    <Button
        android:text="@string/try_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/tryAgain" />

</RelativeLayout>